--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusableInTouchMode="true"
         tools:context=".MainActivity">
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btAdd"
             android:src="@android:drawable/ic_input_add"
@@ -14,24 +16,35 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
+
+    <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            app:queryHint="By name, phone number"
+            app:iconifiedByDefault="false"
+            android:layout_height="?actionBarSize" />
 
     <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabMenu"
+            app:layout_constraintTop_toBottomOf="@id/search_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints">
+            android:layout_height="wrap_content">
+
         <com.google.android.material.tabs.TabItem
                 android:id="@+id/all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="All"/>
+                android:text="All" />
+
         <com.google.android.material.tabs.TabItem
                 android:id="@+id/favo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Favorite"/>
+                android:text="Favorite" />
     </com.google.android.material.tabs.TabLayout>
+
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/vpContact"
             app:layout_constraintTop_toBottomOf="@id/tabMenu"
@@ -39,5 +52,5 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
